ANTLR/GRAMATICA/gramCCParser.py
# Generated from gramCC.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramCCParser ( Parser ):

    grammarFileName = "gramCC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'a'", "'b'", "'c'", "'bas'", "'big'", 
                     "'boss'" ]

    symbolicNames = [ "<INVALID>", "A", "B", "C", "BAS", "BIG", "BOSS", 
                      "WS" ]

    RULE_programa = 0
    RULE_regla_s = 1
    RULE_regla_a = 2
    RULE_regla_b = 3
    RULE_regla_c = 4

    ruleNames =  [ "programa", "regla_s", "regla_a", "regla_b", "regla_c" ]

    EOF = Token.EOF
    A=1
    B=2
    C=3
    BAS=4
    BIG=5
    BOSS=6
    WS=7

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def regla_s(self):
            return self.getTypedRuleContext(gramCCParser.Regla_sContext,0)


        def EOF(self):
            return self.getToken(gramCCParser.EOF, 0)

        def getRuleIndex(self):
            return gramCCParser.RULE_programa

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = gramCCParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 10
            self.regla_s()
            self.state = 11
            self.match(gramCCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Regla_sContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def regla_a(self):
            return self.getTypedRuleContext(gramCCParser.Regla_aContext,0)


        def regla_s(self):
            return self.getTypedRuleContext(gramCCParser.Regla_sContext,0)


        def getRuleIndex(self):
            return gramCCParser.RULE_regla_s

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegla_s" ):
                return visitor.visitRegla_s(self)
            else:
                return visitor.visitChildren(self)




    def regla_s(self):

        localctx = gramCCParser.Regla_sContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_regla_s)
        try:
            self.state = 17
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 13
                self.regla_a()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 14
                self.regla_a()
                self.state = 15
                self.regla_s()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Regla_aContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def A(self):
            return self.getToken(gramCCParser.A, 0)

        def regla_b(self):
            return self.getTypedRuleContext(gramCCParser.Regla_bContext,0)


        def regla_c(self):
            return self.getTypedRuleContext(gramCCParser.Regla_cContext,0)


        def getRuleIndex(self):
            return gramCCParser.RULE_regla_a

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegla_a" ):
                return visitor.visitRegla_a(self)
            else:
                return visitor.visitChildren(self)




    def regla_a(self):

        localctx = gramCCParser.Regla_aContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_regla_a)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self.match(gramCCParser.A)
            self.state = 20
            self.regla_b()
            self.state = 21
            self.regla_c()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Regla_bContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def B(self):
            return self.getToken(gramCCParser.B, 0)

        def BAS(self):
            return self.getToken(gramCCParser.BAS, 0)

        def BIG(self):
            return self.getToken(gramCCParser.BIG, 0)

        def regla_c(self):
            return self.getTypedRuleContext(gramCCParser.Regla_cContext,0)


        def BOSS(self):
            return self.getToken(gramCCParser.BOSS, 0)

        def getRuleIndex(self):
            return gramCCParser.RULE_regla_b

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegla_b" ):
                return visitor.visitRegla_b(self)
            else:
                return visitor.visitChildren(self)




    def regla_b(self):

        localctx = gramCCParser.Regla_bContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_regla_b)
        try:
            self.state = 29
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 23
                self.match(gramCCParser.B)
                self.state = 24
                self.match(gramCCParser.BAS)
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 25
                self.match(gramCCParser.BIG)
                self.state = 26
                self.regla_c()
                self.state = 27
                self.match(gramCCParser.BOSS)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Regla_cContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def C(self):
            return self.getToken(gramCCParser.C, 0)

        def getRuleIndex(self):
            return gramCCParser.RULE_regla_c

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegla_c" ):
                return visitor.visitRegla_c(self)
            else:
                return visitor.visitChildren(self)




    def regla_c(self):

        localctx = gramCCParser.Regla_cContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_regla_c)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 31
                self.match(gramCCParser.C)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





